syntax = "proto3";

package com.github.fckng0d.auth;

option java_multiple_files = true;
option java_package = "com.github.fckng0d.grpc";
option java_outer_classname = "AuthServiceProto";

service AuthService {
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc ValidateToken (TokenRequest) returns (ValidationResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message TokenRequest {
  string token = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

message ValidationResponse {
  bool valid = 1;
  string username = 2;
  repeated string roles = 3;
}